--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@
   list-style: none;
 }
 
-.contacts__link, .nav__link, .modal, .backdrop, .mobile-menu-nav__link, .mobile-menu-btn, .mobile-menu {
+.contacts__link, .nav__link, .register__check, .register__uncheck, .register__message, .register__icon, .register__field, .modal, .backdrop, .mobile-menu-nav__link, .mobile-menu-btn, .mobile-menu {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -396,21 +396,24 @@ a {
 }
 
 .modal {
-  padding: 40px 20px;
   position: relative;
   left: 50%;
   top: 400px;
-  max-width: 450px;
+  padding: 40px;
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transform: translate(-50%, -50%);
   transition-property: opacity;
 }
+@media screen and (max-width: 767.98px) {
+  .modal {
+    max-width: 450px;
+  }
+}
 @media screen and (min-width: 480px) {
   .modal {
     width: 450px;
-    padding: 40px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -433,31 +436,26 @@ a {
   fill: #2196f3;
 }
 
-.register {
-  font-size: 12px;
-}
-@media screen and (min-width: 320px) and (max-width: 1199px) {
-  .register__text-label--mobile {
-    line-height: 1.1666666667;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .register {
-    font-size: 14px;
-  }
-}
 .register__title {
   display: block;
   margin-bottom: 12px;
+  font-weight: 700;
   font-size: 20px;
-  line-height: 1.15;
-  text-align: center;
+  line-height: 1.5;
   letter-spacing: 0.03em;
+  text-align: center;
   color: #212121;
 }
+@media screen and (min-width: 1200px) {
+  .register__title {
+    line-height: 1.15;
+  }
+}
+
 .register__form {
   margin-bottom: 20px;
 }
+
 .register__wrap {
   position: relative;
   display: flex;
@@ -467,46 +465,55 @@ a {
 .register__wrap:not(:last-child) {
   margin-bottom: 10px;
 }
+
 .register__label {
+  font-weight: 500;
   font-size: 12px;
   line-height: 1.1666666667;
   letter-spacing: 0.01em;
   color: #757575;
 }
+
 .register__field {
-  padding: 12px 41px;
+  padding: 11px 41px;
+  font-weight: 400;
   font-size: 14px;
-  line-height: 1.1666666667;
+  line-height: 1.1428571429;
+  letter-spacing: 0.02em;
   border: 1px solid rgba(13, 2, 2, 0.2);
   border-radius: 4px;
   outline: transparent;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color;
 }
 .register__field:focus {
   border-color: #2196f3;
 }
+
 .register__icon {
   position: absolute;
-  bottom: 14px;
+  padding: 0;
+  bottom: 15px;
   left: 12px;
   fill: #212121;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill;
 }
 .register__field:focus + .register__icon {
-  fill: #212121;
+  fill: #2196f3;
 }
+
 .register__message {
   height: 120px;
   padding: 12px 16px;
-  font-size: 12px;
-  line-height: 1.1666666667;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.1428571429;
   letter-spacing: 0.01em;
   color: #757575;
   border: 1px solid rgba(13, 2, 2, 0.2);
   border-radius: 4px;
   outline: transparent;
   resize: none;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color;
 }
 .register__message:focus {
   border-color: #2196f3;
@@ -514,6 +521,7 @@ a {
 .register__message::placeholder {
   color: rgba(117, 117, 117, 0.5);
 }
+
 .register__agreement {
   display: flex;
   align-items: center;
@@ -521,38 +529,67 @@ a {
   gap: 8px;
   margin-bottom: 30px;
 }
+
+.register__checkbox {
+  opacity: 0;
+}
 .register__checkbox:focus + .register__agreement-icon {
   outline: 2px solid #2196f3;
   outline-offset: 1px;
   border-radius: 2px;
 }
-.register__uncheck {
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.register__checkbox {
-  opacity: 0;
-}
 .register__checkbox:checked + .register__pic > .register__uncheck {
   opacity: 0;
-}
-.register__check {
-  opacity: 0;
-  fill: #2196f3;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .register__checkbox:checked + .register__pic > .register__check {
   opacity: 1;
 }
+
+.register__uncheck {
+  transition: opacity;
+}
+
+.register__check {
+  opacity: 0;
+  fill: #2196f3;
+  transition: opacity;
+}
+
 .register__text-label {
-  line-height: 1.7142857143;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.1666666667;
+  letter-spacing: 0.03em;
   color: #757575;
   user-select: none;
 }
+@media screen and (min-width: 1200px) {
+  .register__text-label {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.7142857143;
+    letter-spacing: 0.03em;
+  }
+}
+
 .register__text-link {
-  color: #2196f3;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.1666666667;
+  letter-spacing: 0.03em;
   text-decoration: underline;
   text-underline-position: under;
+  color: #2196f3;
 }
+@media screen and (min-width: 1200px) {
+  .register__text-link {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.7142857143;
+    letter-spacing: 0.03em;
+  }
+}
+
 .register__btn {
   display: flex;
   align-items: center;
@@ -560,13 +597,13 @@ a {
   margin-left: auto;
   margin-right: auto;
   padding: 10px 52px;
-  width: 200px;
+  min-width: 200px;
   height: 50px;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.875;
-  text-align: center;
   letter-spacing: 0.06em;
+  text-align: center;
   color: #ffffff;
   background: #2196f3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
