--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,9 +1,11 @@
 .modal {
-  padding: 40px 20px;
   position: relative;
   left: 50%;
   top: 400px;
-  max-width: 450px;
+  padding: 40px;
+  @include mq(mob-only) {
+    max-width: 450px;
+  }
 
   background-color: $white-bg-cl;
   box-shadow: 0px 1px 3px $dark-cl-12, 0px 1px 1px $dark-cl-14, 0px 2px 1px $dark-bg-cl-20;
@@ -13,7 +15,6 @@
   @extend%animation;
   @include mq(mob) {
     width: 450px;
-    padding: 40px;
   }
   @include mq(desk) {
     width: 528px;
