--- a/sass/layouts/_examples.scss
+++ b/sass/layouts/_examples.scss
@@ -1,43 +1,40 @@
 .examples {
-  @media screen and(min-width: 320px) and(max-width: 1199px) {
-    & {
-      display: none;
-    }
+  @include mq(not-desk) {
+    display: none;
   }
-  @media screen and(min-width: 1200px) {
-    padding-top: 0;
-    &__heading {
-      margin-bottom: 50px;
-      font-size: 36px;
-      line-height: 1.17;
-      text-align: center;
-      color: $dark-txt-cl;
-    }
-    &__list {
-      display: flex;
-    }
-    &__list .item:not(:last-child) {
-      margin-right: 30px;
-    }
-    &__content {
-      position: relative;
-    }
-    &__overlay {
-      display: flex;
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      min-height: 70px;
-      align-items: center;
-      justify-content: center;
-      background-color: $dark-gray-cl-80;
-    }
-    &__subtitle {
-      font-weight: 700;
-      line-height: 1.14;
-      text-transform: uppercase;
-      color: $light-txt-cl;
-    }
-  }
+  @include section;
+}
+
+.examples__heading {
+  padding-top: 0;
+  margin-bottom: 50px;
+
+  @include fonts(36px, 42px, 700, 0.03em);
+  text-align: center;
+
+  color: $dark-txt-cl;
+}
+.examples__list {
+  @extend%list;
+  --items: 3;
+}
+.examples__content {
+  position: relative;
+}
+.examples__overlay {
+  display: flex;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  min-height: 70px;
+  align-items: center;
+  justify-content: center;
+  background-color: $dark-gray-cl-80;
+}
+.examples__subtitle {
+  @include fonts(14px, 16px, 700, 0.03em);
+  text-transform: uppercase;
+
+  color: $light-txt-cl;
 }
