--- a/sass/base/_card-set.scss
+++ b/sass/base/_card-set.scss
@@ -1,9 +1,9 @@
 .card-set {
   display: flex;
   flex-wrap: wrap;
-  gap: $indent;
+  gap: var(--indent);
 }
 
 .card-set__item {
-  flex-basis: calc((100% - $indent * ($items - 1)) / $items);
+  flex-basis: calc((100% - var(--indent) * (var(--items) - 1)) / var(--items));
 }
