--- a/sass/layouts/_advantages.scss
+++ b/sass/layouts/_advantages.scss
@@ -1,61 +1,43 @@
 .advantages {
-  @media screen and (min-width: 320px) and (max-width: 767px) {
-    &__picture {
-      padding: 25px 0px;
-      text-align: center;
-    }
-    &__item {
-      margin-bottom: 30px;
-    }
-    &__item:last-child {
-      margin-bottom: 0px;
-    }
-    &__heading {
-      text-align: center;
-    }
-  }
-  @media screen and (min-width: 768px) and (max-width: 1199px) {
-    &__list {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 30px;
-    }
-    &__item {
-      flex-basis: calc((100% - 30px) / 2);
-    }
-    &__picture {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-  }
-  @media screen and (min-width: 1200px) {
-    &__picture {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      min-width: 270px;
-      height: 120px;
+  background-color: $white-bg-cl;
+  @include section;
+}
 
-      background-color: $light-bg-cl;
-      border-radius: 4px;
-    }
-    &__list .item:not(:last-child) {
-      margin-right: 30px;
-    } 
-    &__list {
-      display: flex;
-    }
+.advantages__list {
+  @extend%list;
+  --items: 1;
+  @include mq(tab) {
+    --items: 2;
   }
-  &__heading {
-    margin-top: 30px;
-    margin-bottom: 10px;
-    line-height: calc(16 / 14);
-    font-size: 14px;
-    text-transform: uppercase;
-    color: $dark-txt-cl;
+  @include mq(desk) {
+    --items: 4;
   }
-  &__text {
+}
+.advantages__item {
+  &:last-child {
     margin-bottom: 0px;
   }
+}
+.advantages__picture {
+  padding: 25px 0px;
+  text-align: center;
+  background-color: $light-bg-cl;
+  border-radius: 4px;
+}
+.advantages__heading {
+  margin-top: 30px;
+  margin-bottom: 10px;
+
+  @include fonts(14px, 16px, 700, 0.03em);
+  text-align: center;
+  text-transform: uppercase;
+
+  color: $dark-txt-cl;
+  @include mq(tab) {
+    text-align: left;
+  }
+}
+.advantages__text {
+  margin-bottom: 0px;
+  @include fonts(14px, 24px, 400, 0.03em);
 }
