--- a/css/main.css
+++ b/css/main.css
@@ -16,13 +16,13 @@
   margin: -1px;
 }
 
-.team__list, .examples__list, .advantages__list, .contacts, .nav__list, .socials, .mobile-menu-socials__list, .mobile-menu-contacts__list, .mobile-menu-nav__list {
+.clients__list, .team__list, .examples__list, .advantages__list, .contacts, .nav__list, .socials, .mobile-menu-socials__list, .mobile-menu-contacts__list, .mobile-menu-nav__list {
   padding: 0;
   margin: 0;
   list-style: none;
 }
 
-.contacts__link, .nav__link, .register__check, .register__uncheck, .register__message, .register__icon, .register__field, .modal, .backdrop, .socials__link, .mobile-menu-nav__link, .mobile-menu-btn, .mobile-menu {
+.clients__link, .contacts__link, .nav__link, .register__check, .register__uncheck, .register__message, .register__icon, .register__field, .modal, .backdrop, .socials__link, .mobile-menu-nav__link, .mobile-menu-btn, .mobile-menu {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -1107,92 +1107,68 @@ a {
   color: #757575;
 }
 
+.clients {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+@media screen and (min-width: 1200px) {
+  .clients {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
+
 .clients__title {
+  margin-bottom: 30px;
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 1.1785714286;
+  letter-spacing: 0.03em;
   text-align: center;
   color: #212121;
 }
-@media screen and (min-width: 320px) and (max-width: 767px) {
-  .clients {
-    display: inline-block;
-  }
-  .clients__item {
-    display: inline-block;
-    margin-top: 30px;
-  }
-  .clients__item:nth-child(odd) {
-    margin-right: 30px;
-  }
+@media screen and (min-width: 1200px) {
   .clients__title {
-    font-size: 30px;
-    line-height: 1.1785714286;
-  }
-  .clients__list {
-    display: block;
-    font-size: 0;
-  }
-  .clients__link {
-    display: inline-block;
-    padding: 16px 50px;
+    margin-bottom: 50px;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.1666666667;
+    letter-spacing: 0.03em;
   }
 }
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-  .clients__link {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-  }
-  .clients__title {
-    font-size: 28px;
-    line-height: 1.1785714286;
-    margin-bottom: 30px;
-  }
+
+.clients__list {
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+  --items: 2;
+}
+@media screen and (min-width: 768px) {
   .clients__list {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 30px;
-  }
-  .clients__item {
-    flex-basis: calc((100% - 60px) / 3);
-  }
-  .clients__link {
-    width: 226px;
+    --items: 3;
   }
 }
 @media screen and (min-width: 1200px) {
-  .clients__link {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-  }
-  .clients__title {
-    font-size: 36px;
-    line-height: 1.1666666667;
-    margin-bottom: 50px;
-  }
   .clients__list {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  .clients__link {
-    width: 170px;
-  }
-  .clients__list .item:not(:last-child) {
-    margin-right: 30px;
+    --items: 6;
   }
 }
-.clients__link:hover, .clients__link:focus {
-  border: 1px solid #2196f3;
-  fill: #2196f3;
-}
+
 .clients__link {
-  height: 92px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 16px;
+  padding-bottom: 16px;
   border: 1px solid #afb1b8;
   border-radius: 4px;
   fill: #afb1b8;
   transition-property: fill, border;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.clients__link:hover, .clients__link:focus {
+  border: 1px solid #2196f3;
+  fill: #2196f3;
 }
 
 .portfolio__title {
